--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
 
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-          Hi, I am <strong>Jakub Jurczak</strong>
+          Hi, I am <br> 
+          <strong>Jakub Jurczak</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">full-stack dev</p>
+      
       <img src="img/zdjęcie-j.PNG" alt="a picture Jakub Jurczak" class="intro__img">
+      <p class="section__subtitle section__subtitle--intro">fulls-stack dev</p>
     </section>
         
 
@@ -119,8 +121,8 @@
           <p class="application_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <img src="/img/Przechwytywanie.JPG" height="200">
           <br>
-          <i class="fas fa-code-branch"></i><a class="view_on_github_button" href="">Go to Github</a>
-          <i class="fas fa-external-link-alt"></i><a class="live_preview_button" href="">Live version</a>
+          <button><i class="fas fa-code-branch"></i><a class="view_on_github_button" >Go to Github</a></button>
+          <button><i class="fas fa-external-link-alt"></i><a class="live_preview_button" >Live version</a></button>
           <div class="skill_list">
             <p>Skills used</p>
             <ul>
@@ -136,8 +138,8 @@
           <p class="application_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <img src="/img/Przechwytywanie.JPG" height="200">
           <br>
-          <i class="fas fa-code-branch"></i><a class="view_on_github_button" href="">Go to Github</a>
-          <i class="fas fa-external-link-alt"></i><a class="live_preview_button" href="">Live version</a>
+          <button><i class="fas fa-code-branch"></i><a class="view_on_github_button" >Go to Github</a></button>
+          <button><i class="fas fa-external-link-alt"></i><a class="live_preview_button" >Live version</a></button>
           <div class="skill_list">
             <p>Skills used</p>
             <ul>
@@ -153,8 +155,8 @@
           <p class="application_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <img src="/img/Przechwytywanie.JPG" height="200">
           <br>
-          <i class="fas fa-code-branch"></i><a class="view_on_github_button" href="">Go to Github</a>
-          <i class="fas fa-external-link-alt"></i><a class="live_preview_button" href="">Live version</a>
+          <button><i class="fas fa-code-branch"></i><a class="view_on_github_button" >Go to Github</a></button>
+          <button><i class="fas fa-external-link-alt"></i><a class="live_preview_button" >Live version</a></button>
           <div class="skill_list">
             <p>Skills used</p>
             <ul>
@@ -170,8 +172,8 @@
           <p class="application_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <img src="/img/Przechwytywanie.JPG" height="200">
           <br>
-          <i class="fas fa-code-branch"></i><a class="view_on_github_button" href="">Go to Github</a>
-          <i class="fas fa-external-link-alt"></i><a class="live_preview_button" href="">Live version</a>
+          <button><i class="fas fa-code-branch"></i><a class="view_on_github_button" >Go to Github</a></button>
+          <button><i class="fas fa-external-link-alt"></i><a class="live_preview_button" >Live version</a></button>
           <div class="skill_list">
             <p>Skills used</p>
             <ul>
@@ -187,8 +189,8 @@
           <p class="application_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <img src="/img/Przechwytywanie.JPG" height="200">
           <br>
-          <i class="fas fa-code-branch"></i><a class="view_on_github_button" href="">Go to Github</a>
-          <i class="fas fa-external-link-alt"></i><a class="live_preview_button" href="">Live version</a>
+          <button><i class="fas fa-code-branch"></i><a class="view_on_github_button" >Go to Github</a></button>
+          <button><i class="fas fa-external-link-alt"></i><a class="live_preview_button" >Live version</a></button>
           <div class="skill_list">
             <p>Skills used</p>
             <ul>
@@ -204,8 +206,8 @@
           <p class="application_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <img src="/img/Przechwytywanie.JPG" height="200">
           <br>
-          <i class="fas fa-code-branch"></i><a class="view_on_github_button" href="">Go to Github</a>
-          <i class="fas fa-external-link-alt"></i><a class="live_preview_button" href="">Live version</a>
+          <button><i class="fas fa-code-branch"></i><a class="view_on_github_button" >Go to Github</a></button>
+          <button><i class="fas fa-external-link-alt"></i><a class="live_preview_button" >Live version</a></button>
           <div class="skill_list">
             <p>Skills used</p>
             <ul>
@@ -231,7 +233,6 @@
       <a href="https://www.linkedin.com/in/jakub-jurczak/"><i class="fab fa-linkedin fa-3x" style="color:#3d3d3d; margin: 10px;"></i></a>
       <a href=""><i class="fab fa-github-square fa-3x" style="color:#3d3d3d; margin: 10px;"></i></a>
     </div>
-    <a href="jurak2012@gmial.com" class="footer__link">jurak2012@gmial.com</a>
   </footer>
 
   <script src="js/index.js"></script>
